--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "cors": "^2.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^3.0.1",
+    "react-npm": "^2.6.1",
+    "react-router-dom": "^6.22.3",
+    "react-scripts": "^5.0.1",
+    "start": "^5.1.0",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
